[project]
name = "comfyui-lora-manager"
description = "Revolutionize your workflow with the ultimate LoRA companion for ComfyUI!"
version = "0.9.3"
license = {file = "LICENSE"}
dependencies = [
    "aiohttp",
    "jinja2", 
    "safetensors",
    "piexif",
    "Pillow",
    "olefile", # for getting rid of warning message
    "toml",
    "natsort",
    "GitPython",
    "aiosqlite"
]

[project.urls]
Repository = "https://github.com/DeadBranches/ComfyUI-Lora-Manager"

# The upstream project advertised Comfy Registry metadata here. This fork does not
# publish to the registry, so the section has been removed intentionally to avoid
# suggesting that registry automation is supported.
